Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T4848619/T4848619a.out
T4848619a.java:11:37: compiler.err.illegal.self.ref
1 error
